# yast-phone-services

./: .cvsignore  MAINTAINER  Makefile.am  Makefile.cvs  Makefile.in  RPMNAME  TODO  configure  configure.in  yast2-phone-services.spec.in
agents/: Makefile.am  Makefile.in  phone-services.scr
doc/: Makefile.am  Makefile.in
icons/: Makefile.am  Makefile.in
package/: yast2-phone-services.changes
src/: Makefile.am  Makefile.in
src/clients/: Makefile.am  Makefile.in  answering_machine.rb  answering_machine.ycp  fax.rb  fax.ycp
src/config/: Makefile.am  Makefile.in  answering_machine.desktop  answering_machine.y2cc  fax.desktop  fax.y2cc
src/desktop/: answering_machine.desktop
src/include/phone-services/: answering_machine.rb  fax.rb  fax.ycp
src/modules/: Answering_machine.rb  Answering_machine.ycp  Fax.rb  Fax.ycp  Makefile.am  Makefile.in
src/phone-services/: Makefile.am  Makefile.in  answering_machine.ycp  fax.ycp
